fixing alignment

--- a/css/main.css
+++ b/css/main.css
@@ -82,7 +82,6 @@ img {
   max-width: 100%; }
 
 footer {
-  text-align: center;
   font-weight: 300;
   bottom: 0;
 }
@@ -90,7 +89,7 @@ footer {
 footer li {
   font: 20px/1.4 "Helvetica", sans-serif;
 
-  margin: 0 100px
+  margin: 0 300px
   font-weight: 300;
   padding-top: 1em;
   text-align: justify;}
@@ -134,12 +133,11 @@ nav a {
 
 ul {
   list-style-type: none;
-  margin: 0;
+  margin: 0px;
   padding: 0;
   background-color: white;
-  text-align: center;
   text-decoration: none;
-
+  text-align:center;
 
 }
 
